--- a/backend/package.json
+++ b/backend/package.json
@@ -8,13 +8,15 @@
     "build": "bun tsc"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "prisma": "^6.10.1"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
     "@fastify/websocket": "^11.1.0",
+    "@prisma/client": "^6.10.1",
     "bullmq": "^5.56.0",
     "fastify": "^5.4.0",
     "ioredis": "^5.6.1",
