--- a/backend/package.json
+++ b/backend/package.json
@@ -9,17 +9,21 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/unzipper": "^0.10.11",
     "prisma": "^6.10.1"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
+    "@fastify/multipart": "^9.0.3",
     "@fastify/websocket": "^11.1.0",
     "@prisma/client": "^6.10.1",
     "bullmq": "^5.56.0",
+    "dotenv": "^16.6.0",
     "fastify": "^5.4.0",
     "ioredis": "^5.6.1",
+    "unzipper": "^0.12.3",
     "zod": "^3.25.67"
   }
 }
