--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/mime-types": "^3.0.1",
     "@types/unzipper": "^0.10.11",
     "prisma": "^6.10.1"
   },
@@ -24,6 +25,7 @@
     "dotenv": "^16.6.0",
     "fastify": "^5.4.0",
     "ioredis": "^5.6.1",
+    "mime-types": "^3.0.1",
     "unzipper": "^0.12.3",
     "zod": "^3.25.67"
   }
