--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/codegeist"
 REDIS_URL="redis://localhost:6379"
+REDIS_HOST="localhost"
+REDIS_PORT=6379
