--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,11 @@
     "date-fns": "^4.1.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.525.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
