--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/mime-types": "^3.0.1",
+    "@types/node": "^24.0.14",
     "@types/unzipper": "^0.10.11",
     "prisma": "^6.10.1"
   },
@@ -17,6 +18,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.56.0",
     "@fastify/cors": "^11.0.1",
     "@fastify/multipart": "^9.0.3",
     "@fastify/websocket": "^11.1.0",
