--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,21 @@ services:
       - postgres
       - redis
 
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: codegeist-backend
+    restart: unless-stopped
+    ports:
+      - "8080:8080"
+    env_file: ./backend/.env.production
+    environment:
+      NODE_ENV: production
+    depends_on:
+      - postgres
+      - redis
+
 volumes:
   pg_data:
   redis_data:
