--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,32 @@
 {
   "name": "backend",
   "module": "index.ts",
-  "type": "module",
   "private": true,
   "scripts": {
-    "dev": "bun run --watch src/server.ts",
-    "build": "bun tsc"
+    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/server.ts",
+    "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
+    "start": "node dist/server.js",
+    "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/mime-types": "^3.0.1",
+    "@types/node": "^24.1.0",
     "@types/unzipper": "^0.10.11",
-    "prisma": "^6.10.1"
+    "prisma": "^6.10.1",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.16",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.8.3"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.56.0",
+    "@aws-sdk/client-s3": "^3.850.0",
+    "@aws-sdk/types": "^3.840.0",
     "@fastify/cors": "^11.0.1",
     "@fastify/multipart": "^9.0.3",
     "@fastify/websocket": "^11.1.0",
