--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,33 @@ services:
     volumes:
       - redis_data:/data
 
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: codegeist-frontend
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    depends_on:
+      - postgres
+      - redis
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: codegeist-backend
+    restart: unless-stopped
+    ports:
+      - "8080:8080"
+    env_file: ./backend/.env.production
+    environment:
+      NODE_ENV: production
+    depends_on:
+      - postgres
+      - redis
+
 volumes:
   pg_data:
   redis_data:
