--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,10 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/codegeist"
-REDIS_URL="redis://localhost:6379"
-REDIS_HOST="localhost"
+DATABASE_URL="postgresql://postgres:postgres@postgres:5432/codegeist"
+REDIS_URL="redis://redis:6379"
+REDIS_HOST="redis"
 REDIS_PORT=6379
 ANTHROPIC_API_KEY=
+
+KEYCLOAK_URL=http://localhost:8081
+KEYCLOAK_REALM=bid
+KEYCLOAK_CLIENT_ID=fastapi-client
+KEYCLOAK_CLIENT_SECRET=
