--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mime-types": "^3.0.1",
     "@types/node": "^24.1.0",
     "@types/unzipper": "^0.10.11",
@@ -35,6 +36,8 @@
     "dotenv": "^17.0.0",
     "fastify": "^5.4.0",
     "ioredis": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "mime-types": "^3.0.1",
     "unzipper": "^0.12.3",
     "zod": "^3.25.67"
