--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.0.0",
+		"@types/js-cookie": "^3.0.6",
 		"bits-ui": "^2.8.6",
 		"clsx": "^2.1.1",
 		"eslint": "^9.18.0",
@@ -44,6 +45,8 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"js-cookie": "^3.0.5",
+		"keycloak-js": "^26.2.0",
 		"lucide-svelte": "^0.525.0",
 		"mode-watcher": "^1.1.0"
 	}
